<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--region $MoviePopularityAndRating-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_popularity_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_movie_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="42sp"
                app:layout_constraintBottom_toTopOf="@id/textView_movie_popularity_title"
                app:layout_constraintEnd_toEndOf="@id/textView_movie_popularity_title"
                app:layout_constraintStart_toStartOf="@id/textView_movie_popularity_title"
                tools:text="80%" />

            <TextView
                android:id="@+id/textView_movie_popularity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/popularity"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginVertical="8dp"
                android:background="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="@id/textView_movie_popularity_title"
                app:layout_constraintEnd_toStartOf="@id/textView_movie_rating"
                app:layout_constraintStart_toEndOf="@id/textView_movie_popularity_title"
                app:layout_constraintTop_toTopOf="@id/textView_movie_popularity" />

            <ImageView
                android:id="@+id/imageView_rating_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rating_star"
                app:layout_constraintBottom_toTopOf="@id/textView_movie_rating"
                app:layout_constraintEnd_toEndOf="@id/textView_movie_rating"
                app:layout_constraintStart_toStartOf="@id/textView_movie_rating" />

            <TextView
                android:id="@+id/textView_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="4.2/5.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--endregion-->

        <!--region $MovieGenresRegion-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/constraint_popularity_rating">

            <com.google.android.material.chip.Chip
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/placeholder_genre"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp" />

        </com.google.android.material.chip.ChipGroup>
        <!--endregion-->

        <!--region MovieOverView-->
        <TextView
            android:id="@+id/textView_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:text="@string/overview"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup_genres" />

        <TextView
            android:id="@+id/textView_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView_overview_title"
            app:layout_constraintTop_toBottomOf="@id/textView_overview_title"
            tools:text="@string/placeholder_movie_overview" />
        <!--endregion-->

        <!--region $MovieCastsRegion-->
        <TextView
            android:id="@+id/textView_cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:text="@string/cast"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView_cast_title"
            tools:listitem="@layout/item_cast" />
        <!--endregion-->

        <!--region $MovieTrailerRegion-->
        <TextView
            android:id="@+id/textView_trailer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:text="@string/trailer"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_cast" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_trailer"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView_trailer_title"
            app:layout_constraintTop_toBottomOf="@id/textView_trailer_title">

        </androidx.cardview.widget.CardView>
        <!--endregion-->

        <!--region $SimilarMoviesRegion-->
        <TextView
            android:id="@+id/textView_similar_movies_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:text="@string/similar_movies"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_trailer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_popularMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintHeight_min="160dp"
            app:layout_constraintTop_toBottomOf="@id/textView_similar_movies_title"
            tools:listitem="@layout/item_popular_show" />
        <!--endregion-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>